Static pages revision

--- a/templates/ctb/fact_sheet.html
+++ b/templates/ctb/fact_sheet.html
@@ -46,7 +46,7 @@
     <p>The CTB is an international cooperation to establish banks of biomaterial from and information on patients who
         were exposed as children or adolescents to fallout from the Chernobyl nuclear accident. It also houses research
         data derived by researchers using the CTB biomaterials, in a web accessible data warehouse. Funds to support the
-        bank were historically provided by the National Cancer Institute of the USA and the Sasakawa Health Foundation
+        bank were historically provided by the National Cancer Institute (NCI) of the USA and the Sasakawa Health Foundation
         of Japan. The Coordinating Centre for the project was previously based at Imperial College, London, UK and is
         currently based at NCI.</p>
     <p>The project commenced collection of material on 1<sup>st</sup> October 1998. It is designed to promote
