--- a/templates/ctb/management_page.html
+++ b/templates/ctb/management_page.html
@@ -26,7 +26,7 @@
 
 {% block subcontent %}
     <p>The project is overseen by a number of committees/panels, which were established in consultation with the
-        financial sponsors of the project and the Ministers of Health in Ukraine. The current management structure
+        financial sponsors of the project and the Ministers of Health in Ukraine and Russia. The current management structure
         reflects the ways in which the project has evolved and will move forward. From time to time subprojects may
         require expert input, which may be provided by a dedicated Group operating for a fixed time period.
 {#        A schema of#}
