--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -114,6 +114,5 @@
 
     <p><strong>More information:</strong></p>
     <p><a href="{% url 'nucleic_acids_and_paraffin_sections' %}">Aliquots of nucleic acid</a><br><a
-            href="{% url 'nucleic_acids_and_paraffin_sections' %}">Paraffin sections</a> <br><a
-            href="{% url 'tissue_microarrays' %}">Tissue Micro Arrays</a></p>
+            href="{% url 'nucleic_acids_and_paraffin_sections' %}">Paraffin sections</a></p>
 {% endblock %}
