--- a/templates/ctb/resources.html
+++ b/templates/ctb/resources.html
@@ -15,9 +15,9 @@
                     <a class="list-group-item list-group-item-action" href="{% url 'bibliography' %}">
                         Publications using CTB samples and data
                     </a>
-                    <a class="list-group-item list-group-item-action" href="{% url 'useful_links' %}">
-                        Useful External Links
-                    </a>
+{#                    <a class="list-group-item list-group-item-action" href="{% url 'useful_links' %}">#}
+{#                        Useful External Links#}
+{#                    </a>#}
                     <a class="list-group-item list-group-item-action" href="{% url 'podcasts_and_videos' %}">
                         Useful Podcasts and Videos
                     </a>
