--- a/templates/ctb/useful_links.html
+++ b/templates/ctb/useful_links.html
@@ -10,7 +10,7 @@
     Useful External Links
 {% endblock %}
 
-{% block page_name %}useful_links{% endblock %}
+{#{% block page_name %}useful_links{% endblock %}#}
 
 {% block page_header %}
     <div class="page-banner">Links to Further Information on the Chernobyl Accident</div>
