--- a/templates/ctb/about_project.html
+++ b/templates/ctb/about_project.html
@@ -25,24 +25,25 @@
 {% endblock %}
 
 {% block subcontent %}
-    <p><strong>The CTB (Chernobyl Tissue Bank) is a unique venture. It is the first international
-        cooperation that seeks to establish a collection of biological samples from tumors and normal
-        tissues from patients for whom the etiology of their disease is known - exposure to radioiodine in
+    <p><strong>The CTB (Chernobyl Tissue Bank) is a unique international cooperation that seeks to establish a
+        collection of biological samples from tumors and normal tissues from patients with a known exposure
+        to radioiodine in
         childhood.</strong></p>
     <p>The project, which started in October 1998, has been historically supported by a number of sponsors including the
         European Commission, the WHO, the National Cancer Institute (NCI) of the USA and the Sasakawa Health Foundation
         of Japan (SHF).</p>
-    <p>The project is currently funded and is coordinated by the Division of Cancer Epidemiology and Genetics, National
+    <p>The project is currently funded and coordinated by the Division of Cancer Epidemiology and Genetics, National
         Cancer Institute (DCEG, NCI) in collaboration with the Institute of Endocrinology and Metabolism in Kiev,
         Ukraine. It supports scientists and clinicians to manage a tissue bank for patients who have developed thyroid
-        tumors following exposure to radiation from the Chernobyl accident. Belarus and Russia were also initially
-        included in the project but is currently suspended for political reasons.</p>
+        tumors following exposure to radiation from the Chernobyl accident. The project has the full support of the
+        Government of the Ukraine. Belarus and Russia were also initially
+        included in the project but those collaborations are currently suspended for political reasons.</p>
     <p>The project has the full support of the Governments of the Ukraine.</p>
-    <p>The large number of thyroid tumors that have occurred in areas exposed to high levels of fallout from the
-        Chernobyl accident raises important problems in the areas of public health, regulation of exposure to
-        radionuclides and in the understanding of the molecular changes involved in their genesis. The over-riding
+    <p>The increased risks of thyroid tumors that have occurred in areas exposed to high levels of fallout from the
+        Chernobyl accident raises important issues related to public health, response to exposure to radionuclides, and
+        potential contributions to medical research. The over-riding
         priority must go to matters such as diagnosis, treatment of those affected, and prevention.</p>
-    <p>However, providing to the needs of the patient is not compromised and it is important to ensure that information
+    <p>However, providing that patient needs are not compromised, it is important to ensure that information
         of value to the health of future generations is not lost. Although the post Chernobyl thyroid tumors are
         associated with a particular etiology, they may also provide clues to the pathogenesis and molecular biology of
         thyroid carcinoma in general.</p>
