--- a/templates/ctb/aims.html
+++ b/templates/ctb/aims.html
@@ -27,7 +27,8 @@
 {% block subcontent %}
     <p><strong>The main objective of this project is to provide a research resource for both ongoing and future
         studies of the health consequences of the Chernobyl accident.</strong></p>
-    <p>It seeks to maximize the amount of information obtained from small pieces of tumor by providing multiple aliquots
+    <p>The project seeks to maximize the amount of information obtained from small pieces of tumor by providing multiple
+        aliquots
         of RNA and DNA extracted from well documented pathological specimens to researchers world-wide and to conserve
         this valuable material for future generations of scientists. It exists to promote collaborative, rather than
         competitive, research on a limited biological resource.</p>
@@ -44,39 +45,33 @@
             to research groups carrying out molecular biological, therapeutic, epidemiological and other studies
         </li>
         <li>provides an archive of data generated from research studies carried out using the material that can be
-            used for future studies on the interaction of specific oncogenic changes in the generation of radiation
-            related thyroid cancer. This may have direct relevance to both prognosis and assessment of risk from
-            exposure to radiation
+            used for future studies. This may have direct relevance to both prognosis and assessment of health risks
+            from exposure to radiation.
         </li>
     </ul>
-    <p>The project has achieved the objectives above. There is evidence that suggests that tumors following a short
-        latency are likely to show a different molecular biological and pathological profile than those of a longer
-        latency; this project will help to clarify this difference as the latent period since the accident increases.
-        Thyroid cancer is increasing world-wide and although most tumors do not have a defined radiation etiology, it is
+    <p>Thyroid cancer is increasing world-wide and although most tumors do not have a defined radiation etiology, it is
         likely that the insights gained from studying the post Chernobyl tumors will provide information that could be
         of use for the diagnosis and treatment of thyroid cancer and of other cancers in general.</p>
     <p><strong>What happens to the results of the research studies?&nbsp;</strong><br>Researchers who
         obtain material from the CTB agree to provide the results of their
         investigation on a case-by-case basis. This information will not be used until after the researchers have
-        published their findings, but it will allow the results of all of the studies to be correlated at a later date,
-        so that, for example, the investigations by different groups of a number of different genes can be correlated to
-        study their interactions. The provision of extracted nucleic acid from thyroid tissue, rather than each
+        published their findings, but it will allow the results of all of the studies to be combined to address novel
+        research questions in the future. The provision of extracted nucleic acid from thyroid tissue, rather than each
         researcher being provided with a small piece of tissue maximizes the amount of data that can potentially be
         obtained from a single operative specimen and will enable multiple molecular biological studies to be carried
         out for each case.</p>
     <p>The CTB biosample search facility allows researchers wishing to access biomaterials to
-        select those cases from which they would wish to receive samples. This search facility will be expanded over
-        the next few months to include the ability to refine searches using clinical information and information on
-        driver mutations obtained from research projects using the resource.</p>
-    <p><strong>Where is the CTB located?</strong><br/>The tissue bank is situated at the Institute of
-        Endocrinology and Metabolism
-        in Kiev, Ukraine . The bank consents patients and prepares and stores material from its own population.
-        Historically, a separate bank was maintained in Russia and each bank maintained its own database of samples and
-        data was shared with an integrated database maintained at the Coordinating Centre at Imperial College, London.
-        Key information is therefore available to researchers wishing to use the tissue banks and each institute has
-        access to the complete data from its own population at any time.</p>
-    <p><strong>Study cohort</strong><br>The CTB includes material and information from all patients
-        with thyroid carcinomas and cellular follicular adenomas from the contaminated oblasts Ukraine (Kiev, Kiev city,
+        select those cases from which they would wish to receive samples. This search facility includes information on
+        the specimen type, patient characteristics, tumor characteristics, and, for certain tumor specimens, the driver
+        mutation(s) identified to date.</p>
+    <p><strong>Where is the CTB located?</strong><br/>The tissue bank is situated iat the Institute of Endocrinology and
+        Metabolism in Kiev, Ukraine . The bank consents patients and prepares and stores material from its own
+        population. Historically, a separate bank was maintained in Russia. Contributing banks bank maintain their own
+        databases of samples and data that are shared into an integrated database maintained at the coordinating center,
+        allowing Key information is therefore available to researchers wishing to use the tissue banks as well as each
+        institute retaining access to the complete data from its own population at any time.</p>
+    <p><strong>Study cohort</strong><br>The CTB currently includes material and information from all patients with
+        thyroid carcinomas and cellular follicular adenomas from the contaminated oblasts of Ukraine (Kiev, Kiev city,
         Cherkasse, Chernigov, Rovno, Zhitomyr and Sumy) who were born after 26th April 1967 (i.e. aged under 19 at the
         time of the Chernobyl accident) and operated on or after the 1st October 1998. Detailed standard operating
         procedures for the collection and documentation of specimens and blood samples have been agreed with
@@ -86,7 +81,7 @@
     <p>Each specimen is given a unique identifier authorized by the appropriate person responsible for
         the management of the resource. The age, sex, age at operation, oblast, and a measured or calculated dose
         received are recorded for each specimen stored in the CTB, and are made available to researchers with approved
-        projects receiving material from the bank. All data accessible by researchers is anonymized. Each anonymized
+        projects receiving material from the bank. All data accessible by researchers are anonymized. Each anonymized
         specimen is assigned a tissue bank reference number by the institute in Ukraine and all data accessible by
-        researchers is identified by this reference number.</p>
+        researchers are identified by this reference number.</p>
 {% endblock %}
