--- a/templates/ctb/nucleic-acids-and-paraffin-sections.html
+++ b/templates/ctb/nucleic-acids-and-paraffin-sections.html
@@ -30,20 +30,19 @@
     <h4 class="pt-3">Aliquots of nucleic acid</h4>
     <p>RNA and DNA are extracted from histologically verified frozen specimens in Ukraine. Extraction is carried out
         based on the agreed SOPs. The Institute in Ukraine and the Coordinating Centre carry our detailed quality
-        assurance using Agilent Bioanalysers.</p>
+        assurance.</p>
     <p>Information about the availability of DNA and RNA extracted from frozen tissue can be viewed
         using the CTB Biosample Search Facility.&nbsp;The numbers change frequently as samples are issued to researchers
         and new extracts are prepared.</p>
     <p>Aliquots of DNA from blood are also available and in the majority of cases these can be paired with samples of
-        RNA and DNA from tissue from the same patient. DNA is extracted using Qiagen kits.</p>
+        RNA and DNA from tissue from the same patient.</p>
     <h4 class="pt-3">Serum</h4>
     <p>Aliquots of serum are also available. These are prepared per agreed SOP.</p>
     <p>There is no fee payable for provision of aliquots of nucleic acid or serum, but investigators will be asked to
         cover the costs of transport of the samples and any other additional costs.</p>
     <h4 class="pt-3">Paraffin sections</h4>
     <p>Sections are available from routine formalin fixed, paraffin embedded tissue and from
-        tissue microarrays (click here for information on <a href="{% url 'tissue_microarrays' %}">tissue
-            microarrays</a>).
+        tissue microarrays.
     </p>
 
 {% endblock %}
