--- a/templates/donors/application_post_submit.html
+++ b/templates/donors/application_post_submit.html
@@ -11,6 +11,8 @@
 
 {% block page_name %}application_post_submit{% endblock %}
 
+{% block page_class %}biosample_tab{% endblock %}
+
 {% block content %}
     <div class="container py-3">
         {% if success %}
@@ -23,7 +25,9 @@
         {% endif %}
         {% if error %}
             <div class="p-3 mb-2 rounded-2 border border-2 border-warning">
-                <i class="fa-solid fa-circle-exclamation text-secondary"></i> There was an error while submitting your application. Please try again or contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any questions.
+                <i class="fa-solid fa-circle-exclamation text-secondary"></i> There was an error while submitting
+                your application. Please try again or contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
+                if you have any questions.
                 <div class="font-monospace text-muted bg-light rounded-2 p-2 mt-2 small">[ERROR] {{ error }}</div>
             </div>
         {% endif %}
