update support email address

--- a/templates/500.html
+++ b/templates/500.html
@@ -3,7 +3,7 @@
 {% load i18n l10n %}
 {% comment %}
 
-   Copyright 2022, Institute for Systems Biology
+   Copyright 2023, Institute for Systems Biology
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -30,7 +30,7 @@
                     <div class="card-body">
                         <h4 class="card-title"><i
                                 class="fas fa-exclamation-triangle"></i> {% trans "500: Internal Server Error" %}</h4>
-                        <p>We apologize for the inconvenience. Please <a href="mailto:help@canceridc.dev">contact us</a>
+                        <p>We apologize for the inconvenience. Please <a href="mailto:ctb-support@isb-cgc.org">contact us</a>
                             and let us know what happened.</p>
                     </div>
                 </div>
