--- a/templates/ctb/aims.html
+++ b/templates/ctb/aims.html
@@ -64,9 +64,9 @@
         select those cases from which they would wish to receive samples. This search facility includes information on
         the specimen type, patient characteristics, tumor characteristics, and, for certain tumor specimens, the driver
         mutation(s) identified to date.</p>
-    <p><strong>Where is the CTB located?</strong><br/>The tissue bank is situated iat the Institute of Endocrinology and
+    <p><strong>Where is the CTB located?</strong><br/>The tissue bank is situated at the Institute of Endocrinology and
         Metabolism in Kiev, Ukraine . The bank consents patients and prepares and stores material from its own
-        population. Historically, a separate bank was maintained in Russia. Contributing banks bank maintain their own
+        population. Historically, a separate bank was maintained in Russia. Contributing banks maintain their own
         databases of samples and data that are shared into an integrated database maintained at the coordinating center,
         allowing Key information is therefore available to researchers wishing to use the tissue banks as well as each
         institute retaining access to the complete data from its own population at any time.</p>
