decorator password_change_required

--- a/templates/accounts/account/password_change.html
+++ b/templates/accounts/account/password_change.html
@@ -15,7 +15,22 @@
                     <div class="card-body p-5">
                         {% if messages %}
                             {% for message in messages %}
-                                {% if message.tags == 'success' %}
+                                {% if message.extra_tags == 'password_expired' %}
+                                    <div class="alert alert-primary">
+                                        <div class="fw-bold"><i class="fas fa-exclamation-triangle me-2"></i> Your password
+                                            has expired and must be changed.
+                                        </div>
+                                    </div>
+                                    <form method="POST" action="{% url 'account_change_password' %}"
+                                          class="password_change">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                        <div class="d-grid pt-3 gap-2">
+                                            <button class="btn btn-primary" type="submit"
+                                                    name="action">{% trans "Change Password" %}</button>
+                                        </div>
+                                    </form>
+                                {% else %}
                                     {% trans 'Your password is now changed.' %}
                                     <div class="d-grid pt-3 gap-2">
                                         <a class="btn btn-primary" type="button" href="{% url 'user_detail' user.id %}">Back
