--- a/templates/accounts/account/lockout.html
+++ b/templates/accounts/account/lockout.html
@@ -17,7 +17,7 @@
                     <div class="card-body p-4">
                         <div><span class="fw-bold mb-2">Your CTB account has been locked</span> due to too many failed
                             login attempts.
-                            An account lock lasts for {{ cooloff_timedelta|time:"G" }} hour{% if cooloff_timedelta|time:"G"|int > 1 %}(s){% endif %}.
+                            An account lock lasts for {{ cooloff_timedelta|time:"G" }} hour{% if cooloff_timedelta|time:"G" > 1 %}(s){% endif %}.
                         </div>
                         <div class="mt-2">Try again later, or contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
                             for help.
