--- a/templates/accounts/account/lockout.html
+++ b/templates/accounts/account/lockout.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% load custom_tags %}
+
 {% block head_title %}Account Lockout{% endblock %}
 
 {% block page_header %}{% endblock %}
@@ -17,7 +19,7 @@
                     <div class="card-body p-4">
                         <div><span class="fw-bold mb-2">Your CTB account has been locked</span> due to too many failed
                             login attempts.
-                            An account lock lasts for {{ cooloff_timedelta }} hour{% if cooloff_timedelta > 1 %}(s){% endif %}.
+                            An account lock lasts for {{ cooloff_timedelta|duration }}.
                         </div>
                         <div class="mt-2">Try again later, or contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
                             for help.
