--- a/templates/ctb/fact_sheet.html
+++ b/templates/ctb/fact_sheet.html
@@ -64,9 +64,9 @@
             diagnosis will be made available to research groups carrying out molecular biological, therapeutic,
             epidemiological and other studies.
         </li>
-        <li>Ensure that knowledge pertaining to the consequences of this accident that may benefit the
+        <li>Ensure that knowledge pertaining to the consequences of this accident may benefit the
             patients involved, or mankind in general, and be of value in responding to future nuclear
-            accidents is not lost.
+            accidents.
         </li>
     </ol>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
