--- a/templates/ctb/access_to_materials.html
+++ b/templates/ctb/access_to_materials.html
@@ -28,7 +28,7 @@
 {% block subcontent %}
     <p>Applications to access biomaterials must be submitted via the Biosample Search facility. All applications for use
         of the bank are referred to an independent External Review Panel, which comprises of experts nominated by the
-        National Cancer Institute of the USA (NCI) the government of Ukraine.</p>
+        National Cancer Institute of the USA (NCI) and the government of Ukraine.</p>
     {#    <p>An overview of the application review procedure is provided in the flow diagram below. Details of#}
     {#        the review procedure and of the criteria on which an application will be evaluated are given in#}
     {#        the <a href="{% url 'fact_sheet' %}" target="_blank"#}
