--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -70,7 +70,7 @@
                                 Application
                             </a>
                             <a type="button" class="btn btn-primary"
-                               href="{% url 'driver_search_facility' %}">Search by Driver Mutation <i
+                               href="{% url 'driver_search_facility' %}&{{ filter_encoded_url }}">Search by Driver Mutation <i
                                     class="fas fa-angle-double-right"></i>
                             </a>
                     </div>
