driver search bugfix

--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -142,7 +142,7 @@ Refine by Clinical Parameters
                             <th colspan="2">Cases<br><span
                                     class="text-muted small text-end">Filtered </span><span
                                     class="text-muted small fst-italic"> /Total</span></th>
-                            <th>Muted Drivers</th>
+                            <th>Mutation Drivers</th>
                             <th colspan="2">Cases<br><span
                                     class="text-muted small text-end">Filtered </span><span
                                     class="text-muted small fst-italic"> /Total</span></th>
