vibha's revision Part I

--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -21,9 +21,9 @@
                     <a class="list-group-item list-group-item-action" href="{% url 'fact_sheet' %}">
                         Fact Sheet
                     </a>
-                    <a class="list-group-item list-group-item-action" href="{% url 'management_page' %}">
-                        Management of the Project
-                    </a>
+{#                    <a class="list-group-item list-group-item-action" href="{% url 'management_page' %}">#}
+{#                        Management of the Project#}
+{#                    </a>#}
                 </div>
             </div>
         </div>
