--- a/templates/ctb/about_project.html
+++ b/templates/ctb/about_project.html
@@ -33,12 +33,12 @@
         European Commission, the WHO, the National Cancer Institute (NCI) of the USA and the Sasakawa Health Foundation
         of Japan (SHF).</p>
     <p>The project is currently funded and coordinated by the Division of Cancer Epidemiology and Genetics, National
-        Cancer Institute (DCEG, NCI) in collaboration with the Institute of Endocrinology and Metabolism in Kiev,
-        Ukraine. It supports scientists and clinicians to manage a tissue bank for patients who have developed thyroid
-        tumors following exposure to radiation from the Chernobyl accident. The project has the full support of the
-        Government of the Ukraine. Belarus and Russia were also initially
-        included in the project but those collaborations are currently suspended for political reasons.</p>
-    <p>The project has the full support of the Governments of the Ukraine.</p>
+        Cancer Institute (DCEG, NCI) in collaboration with the V.P. Komisarenko Institute of Endocrinology (IEM) and
+        Metabolism of the National Academy of Medical Sciences of Ukraine in Kiev, Ukraine. The CTB supports scientists
+        and clinicians to manage a tissue bank for patients who have developed thyroid tumors following exposure to
+        radiation from the Chernobyl accident. The project has the full support of the Government of the Ukraine.
+        Belarus and Russia were also initially included in the project but those collaborations are currently suspended
+        for political reasons.</p>
     <p>The increased risks of thyroid tumors that have occurred in areas exposed to high levels of fallout from the
         Chernobyl accident raises important issues related to public health, response to exposure to radionuclides, and
         potential contributions to medical research. The over-riding
