--- a/templates/ctb/access_to_materials.html
+++ b/templates/ctb/access_to_materials.html
@@ -27,8 +27,7 @@
 
 {% block subcontent %}
     <p>Applications to access biomaterials must be submitted via the Biosample Search facility. All applications for use
-        of the bank are referred to an independent External Review Panel, which comprises of experts nominated by the
-        National Cancer Institute of the USA (NCI) and the government of Ukraine.</p>
+        of the bank are referred to an independent External Review Panel, which includes experts nominated by NCI and the Institute in Ukraine.</p>
     {#    <p>An overview of the application review procedure is provided in the flow diagram below. Details of#}
     {#        the review procedure and of the criteria on which an application will be evaluated are given in#}
     {#        the <a href="{% url 'fact_sheet' %}" target="_blank"#}
@@ -46,7 +45,7 @@
         </li>
     </ol>
     <div class="mt-5">
-        Each sample of nucleic acid or serum will be identified by a CTB sample number and accompanied by
+        Each sample will be identified by a CTB sample ID and will be accompanied by
         a minimum data set comprising the following information:
     </div>
     <ul>
@@ -54,7 +53,7 @@
         <li>age at operation - complying with HIPAA regulations</li>
         <li>sex</li>
         <li>oblast of residence</li>
-        <li>International Pathology Review Panel diagnosis</li>
+        <li>Diagnosis</li>
         <li>Estimated thyroid radiation dose (if requested by the researcher).</li>
     </ul>
     <p class="mt-5">If a project requires more clinical information than the minimum data set, this must be stated
