--- a/templates/ctb/research_projects_2010_2019.html
+++ b/templates/ctb/research_projects_2010_2019.html
@@ -62,9 +62,9 @@
         for will be used in a work package of EpiRadBio that focuses on the cancer risk of papillary thyroid
         cancer. In another, recently finished EU funded project on young onset childhood thyroid carcinomas
         that also used CTB material we found that a gain of the chromosome band 7q11 was associated with
-        exposure to low-dose ionising radiation (He et al., PNAS, in press). The FFPE tumor sections from
+        exposure to low-dose ionizing radiation (He et al., PNAS, in press). The FFPE tumor sections from
         patients, which are part of the UkrAm cohort and which come with estimates on radiation dose the
-        patients have received will be used for validation and further characterisation of this marker. The
+        patients have received, will be used for validation and further characterisation of this marker. The
         FFPE sections will be used for in situ hybridisation (FISH) using 7q11 specific probes. DNA and
         total RNA will also be extracted from the FFPE sections. The DNA will be used for high-resolution
         array CGH and the total RNA for qRT-PCR mRNA expression analysis of candidate genes from the gained
