--- a/templates/ctb/researchers_page.html
+++ b/templates/ctb/researchers_page.html
@@ -31,18 +31,18 @@
         biomaterials and research data in the CTB are available to researchers of approved projects anywhere in the
         world.</strong></p>
     <p>By using the search facility in the CTB Biosample Search, a researcher can define the type of sample
-        and/or data required and obtain an instant read out of the availability of samples and data that
+        and/or data required and obtain an instant report on the availability of samples and data that
         match the search criteria.
         {#        Applications can be made on the application form that can be downloaded#}
         {#        <a href="{% static 'files/application-form.doc' %}">here</a>.&nbsp;#}
         Once approved, biomaterials are sourced and shipped to the researcher. Samples are provided free of charge, but
-        shipping costs will be charged to the researchers. Access to additional research data, if requested, may be made
+        shipping costs will be covered by the researchers. Access to additional research data, if requested, may be made
         available.</p>
     <p>Researchers are strongly encouraged to publish their data and are asked to ensure that the CTB is
         acknowledged in any publications arising from their study. The aim of the CTB is to maximize the value of the
         research data derived from the unique tissue collection and researchers are therefore required to submit their
         research data back to the CTB.</p>
-    <p>The CTB will normally correspond with researchers if their project addresses similar questions, or is
+    <p>The CTB will communicate with researchers if their project addresses similar questions, or is
         likely to produce results that complement other studies. Projects which have used, or are using, CTB
         materials are listed <a href="{% url 'research_projects' %}" target="_blank" rel="noopener">here</a>.
     </p>
