--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -31,7 +31,7 @@
                         <li><a class="dropdown-item" href="{% url 'about_project' %}">About the Project</a></li>
                         <li><a class="dropdown-item" href="{% url 'aims_page' %}">Aims of the Project</a></li>
                         <li><a class="dropdown-item" href="{% url 'fact_sheet' %}">Fact Sheet</a></li>
-                        <li><a class="dropdown-item" href="{% url 'management_page' %}">Management of the Project</a>
+{#                        <li><a class="dropdown-item" href="{% url 'management_page' %}">Management of the Project</a>#}
                         </li>
                     </ul>
                 </li>
