--- a/templates/ctb/aims.html
+++ b/templates/ctb/aims.html
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block subcontent %}
-    <p><strong>The main objective of this project is to provide a research resource for both ongoing and future
+    <p><strong>The main objective of this project is to provide a research resource for ongoing and future
         studies of the health consequences of the Chernobyl accident.</strong></p>
     <p>The project seeks to maximize the amount of information obtained from small pieces of tumor by providing multiple
         aliquots
@@ -57,19 +57,16 @@
         investigation on a case-by-case basis. This information will not be used until after the researchers have
         published their findings, but it will allow the results of all of the studies to be combined to address novel
         research questions in the future. The provision of extracted nucleic acid from thyroid tissue, rather than each
-        researcher being provided with a small piece of tissue maximizes the amount of data that can potentially be
-        obtained from a single operative specimen and will enable multiple molecular biological studies to be carried
+        researcher being provided with a small piece of tissue, maximizes the amount of data that can potentially be
+        obtained from a single specimen and will enable multiple molecular biological studies to be carried
         out for each case.</p>
     <p>The CTB biosample search facility allows researchers wishing to access biomaterials to
         select those cases from which they would wish to receive samples. This search facility includes information on
         the specimen type, patient characteristics, tumor characteristics, and, for certain tumor specimens, the driver
         mutation(s) identified to date.</p>
-    <p><strong>Where is the CTB located?</strong><br/>The tissue bank is situated at the Institute of Endocrinology and
-        Metabolism in Kiev, Ukraine. The bank consents patients, prepares and stores material from its own
-        population. Historically, a separate bank was maintained in Russia. Contributing banks maintain their own
-        databases of samples and data that are shared into an integrated database maintained at the coordinating center,
-        allowing key information available to researchers wishing to use the tissue banks as well as each
-        institute retaining access to the complete data from its own population at any time.</p>
+    <p><strong>Where is the CTB located?</strong><br/>The tissue bank is situated at the V.P. Komisarenko Institute of
+        Endocrinology and Metabolism (IEM) in Kiev, Ukraine. The bank consents patients, prepares and stores material
+        from its own population. Historically, a separate bank was maintained in Russia.</p>
     <p><strong>Study cohort</strong><br>The CTB currently includes material and information from all patients with
         thyroid carcinomas and cellular follicular adenomas from the contaminated oblasts of Ukraine (Kiev, Kiev city,
         Cherkasse, Chernigov, Rovno, Zhitomyr and Sumy) who were born after 26th April 1967 (i.e. aged under 19 at the
@@ -82,6 +79,6 @@
         the management of the resource. The age, sex, age at operation, oblast, and a measured or calculated dose
         received are recorded for each specimen stored in the CTB, and are made available to researchers with approved
         projects receiving material from the bank. All data accessible by researchers are anonymized. Each anonymized
-        specimen is assigned a tissue bank reference number by the institute in Ukraine and all data accessible by
+        specimen is assigned a tissue bank reference number by the Institute in Ukraine and all data accessible by
         researchers are identified by this reference number.</p>
 {% endblock %}
