--- a/templates/ctb/fact_sheet.html
+++ b/templates/ctb/fact_sheet.html
@@ -38,17 +38,18 @@
             <li><a href="#seven">How do I get an answer to any other queries?</a></li>
         </ol>
     </div>
-{#    <div><a href="{% static 'files/Fact-sheet-June-2014.pdf' %}" target="_blank" rel="noopener"#}
-{#            class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-download"></i> Download#}
-{#        this fact sheet as a pdf</a></div>#}
+    {#    <div><a href="{% static 'files/Fact-sheet-June-2014.pdf' %}" target="_blank" rel="noopener"#}
+    {#            class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-download"></i> Download#}
+    {#        this fact sheet as a pdf</a></div>#}
     <hr>
     <h4><a id="one" class="anchor-section pt-5"></a>1. What is the CTB?</h4>
     <p>The CTB is an international cooperation to establish banks of biomaterial from and information on patients who
         were exposed as children or adolescents to fallout from the Chernobyl nuclear accident. It also houses research
         data derived by researchers using the CTB biomaterials, in a web accessible data warehouse. Funds to support the
-        bank were historically provided by the National Cancer Institute (NCI) of the USA and the Sasakawa Health Foundation
+        bank were historically provided by the National Cancer Institute (NCI) of the USA and the Sasakawa Health
+        Foundation
         of Japan. The Coordinating Centre for the project was previously based at Imperial College, London, UK and is
-        currently based at NCI.</p>
+        currently based at NCI, USA.</p>
     <p>The project commenced collection of material on 1<sup>st</sup> October 1998. It is designed to promote
         collaboration and avoid wasteful competition in the use of limited and very scientifically important resources.
     </p>
@@ -70,16 +71,18 @@
         </li>
     </ol>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="two" class="anchor-section pt-5"></a>2. What types of material and information are available from the CTB?
+    <h4><a id="two" class="anchor-section pt-5"></a>2. What types of material and information are available from the
+        CTB?
     </h4>
     <p>The bank includes material and information from patients with thyroid carcinomas and cellular adenomas from the
         contaminated oblasts of Ukraine who were born after
         26<sup>th</sup> April 1967 (i.e. aged under 19 at the time of the Chernobyl accident) and operated
-        on or after 1<sup>st</sup> October 1998. The tissue bank is located at Institute of Endocrinology and Metabolism
-        in Kiev, Ukraine. Detailed standard operating procedures for the collection,
-        documentation and storage of specimens and blood samples have been agreed with professional staff
-        involved in the collection of material. Ethical standards, conforming to the requirements of the country
-        involved, including those of the funding organizations have been agreed with the relevant authorities.</p>
+        on or after 1<sup>st</sup> October 1998. The tissue bank is located at the V.P. Komisarenko Institute of
+        Endocrinology (IEM) and Metabolism of the National Academy of Medical Sciences of Ukraine in Kiev, Ukraine.
+        Detailed standard operating procedures for the collection, documentation and storage of specimens and blood
+        samples have been agreed with professional staff involved in the collection of material. Ethical standards,
+        conforming to the requirements of the country involved, including those of the funding organizations have been
+        agreed with the relevant authorities.</p>
     <p>The Standard Operating Procedures for the collection of information and material have been approved by the
         relevant Institutional Review Boards. Each specimen is given a code authorized by the appropriate person
         responsible for the management of the bank. The
@@ -89,9 +92,8 @@
         the review agreed by the international panel of pathologists.</p>
     <p>Frozen aliquots of DNA and RNA extracted from normal and neoplastic thyroid tissue and DNA extracted
         from blood, are available. A frozen section is taken from each portion of tissue before extraction
-        to verify its nature. DNA and RNA are extracted to an internationally agreed protocol. Quality
-        control is performed on nucleic acid extracted from all tissues and blood samples. In addition,
-        sections from paraffin sections and from sections of tissue microarrays are available.</p>
+        to verify its nature. Quality control is performed on nucleic acid extracted from all tissues and blood samples.
+        In addition, sections from paraffin sections and from sections of tissue microarrays are available.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
 
     <h4><a id="three" class="anchor-section pt-5"></a>3. Who can obtain material and/or research data from the CTB?</h4>
@@ -103,33 +105,20 @@
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
     <h4><a id="four" class="anchor-section pt-5"></a>4. How do researchers apply?</h4>
     <p>Researchers who are interested in using material, information or research data from the CTB for research purposes
-        must complete a brief, but detailed, proposal that includes information on the study design and justification
+        must complete a brief proposal that includes information on the study design and justification
         for their requirements for materials and/or data. Researchers can first check whether there are sufficient
         samples that fit the criteria for their study by using the Biosample Search Facility. An online application can
         be submitted after performing their Biosample Search. Applications are approved by an External Review Panel that
         ensures that the samples are used in the best scientific research by bona fide researchers.</p>
-    <p>Applicants whose projects are approved are encouraged to cooperate with the Institute in Ukraine. For major
-        collaborative studies, a period of training for a member of the relevant Institutes staff may be recommended,
-        and allowance in the application to funding bodies for financial support may need to take account of this and
-        other costs.</p>
     <p>No charge is made for samples of nucleic acid, but researchers must be prepared to pay appropriate expenses for
-        shipment of specimens or any additional costs. Prospective applicants who are not yet in receipt of funding, or
-        who are in the process of obtaining funds, are strongly encouraged to contact the CTB Secretariat to obtain
-        information on resource availability. The CTB does not provide funding for research projects.</p>
+        shipment of specimens or any additional costs. The CTB does not provide funding for research projects.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
     <h4><a id="five" class="anchor-section pt-5"></a>5. How are requests evaluated?</h4>
-    <p>Requests are evaluated for scientific merit and appropriate use of CTB resources by the External
-        Review Panel (ERP), which is an independent, multi-disciplinary panel of senior researchers in the
-        fields of thyroid cancer and radiobiological research. The External Review Panel awards scores for
-        various aspects of an application, which are then averaged. Based on the score, an application will
-        be assigned to one of three categories: (i) approve for access, (ii) the PI to be invited to respond
-        to the ERPs comments, or (iii) reject. The Chairman of the Scientific Advisory Board (SAB) will be
-        advised, for information, of applications scoring in categories (i) or (iii), but will review
-        applications about which questions have been raised and/or for which the PIs response requires
-        further consideration. Projects may be submitted at any time and the review procedures are, in most
-        cases, completed by e-mail.</p>
+    <p>Requests are evaluated for scientific merit and appropriate use of CTB resources. Projects may be submitted at
+        any time and the review procedures are, in most cases, completed by email.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="six" class="anchor-section pt-5"></a>6. What are the criteria for evaluation and review of applications?</h4>
+    <h4><a id="six" class="anchor-section pt-5"></a>6. What are the criteria for evaluation and review of applications?
+    </h4>
     <p>Criteria have been established to ensure that valid, productive and equitable scientific use is made
         of the CTB resources for multidisciplinary and international studies on post Chernobyl thyroid
         cancer. Approval for a project may be subject to the development of appropriate collaborative links.</p>
@@ -146,17 +135,15 @@
         <li>The proposed work cannot be undertaken without the data and/or materials of the type collected
             by the CTB.
         </li>
-        <li>The researchers have provided sufficient evidence to the External Review Panel that they can
-            perform to accepted standards and quality control, the relevant laboratory analytical
-            procedures.
+        <li>The researchers have provided sufficient evidence that they can perform to accepted standards and quality
+            control, the relevant laboratory analytical procedures.
         </li>
         <li>If case information other than the standard data set (date of birth, date of operation, sex,
             oblast of residence, calculated dose and international Pathology Panel review diagnosis) is
             required, the costs of obtaining this data and ethical and consent issues should be adequately
             addressed.
         </li>
-        <li>The researchers are able to obtain sufficient funds to pay for the shipping of Material. Cost
-            estimates will be provided by the Secretariat, based on Steering Committee guidelines.
+        <li>The researchers are able to obtain sufficient funds to pay for the shipping of Material.
         </li>
         <li>The researchers, or their collaborators, can perform and interpret properly the appropriate
             statistical methods required for the study.
@@ -170,29 +157,24 @@
         <li>The research can be undertaken within the time consistent with the researchers funding and the
             availability of the necessary data and materials.
         </li>
-        <li>Any potentially clinically relevant data uncovered during the course of the study will be passed to the CTB
-            Secretariat immediately who will pass the information on to the appropriate center, through the channels
-            agreed by the Steering Committee.
+        <li>Any potentially clinically relevant data uncovered during the course of the study will be shared with NCI
+            immediately.
         </li>
         <li>The researchers agree to provide within 3 months of the completion of their research project, a
             brief report on their work, including the results of their investigations on each sample
-            studied, identified by the CTB sample code number. This information will be sent to the CTB
-            Secretariat for use within the CTB. It will not be otherwise disseminated without the agreement
+            studied, identified by the CTB sample code number. This information will be sent to NCI for use within the
+            CTB. It will not be otherwise disseminated without the agreement
             of the Principal Investigator.
         </li>
-        <li>The researchers will inform the CTB Secretariat if any material has not been used in the performance of
-            their designated study and will return this material, if requested, to the Secretariat for transmission to
+        <li>The researchers will inform NCI if any material has not been used in the performance of
+            their designated study and will return this material, if requested, to NCI for transmission to
             the tissue bank.
         </li>
         <li>The researchers agree not to use the material for any use other than that explicitly proposed in
             their approved project, or to pass any material supplied by the CTB to third parties without the
-            explicit permission of the Scientific Advisory Board.
+            explicit permission from NCI.
         </li>
     </ol>
-    <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="seven" class="anchor-section pt-5"></a>7. How do I get an answer to any other queries?</h4>
-    <p>If you have any questions that are not covered in this fact sheet, please contact us at <a
-            href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> and we will do our best to help you:</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
 
 {% endblock %}
