--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -34,8 +34,8 @@
                     </h1>
                     <h2 class="py-3">
                         The CTB is a research tissue bank that was established to collect, document, store, and issue to
-                        bona fide researchers, biological samples donated by patients with thyroid tumors who live in the
-                        vicinity of the site of the Chernobyl Nuclear Power Plant
+                        bona fide researchers, biological samples donated by patients with thyroid tumors who live in
+                        the areas impacted by the accident at the Chernobyl Nuclear Power Plant
                     </h2>
                 </div>
             </div>
